# ik-rs

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  ik.yml  rust-toolchain.toml
benches/: ik_bench.rs  trie_bench.rs
dict/: stopword.dic.bak
src/: lib.rs
src/config/: configuration.rs  default_config.rs  mod.rs
src/core/: char_util.rs  cjk_segmenter.rs  cn_quantifier_segmenter.rs  ik_arbitrator.rs  ik_segmenter.rs  letter_segmentor.rs  lexeme.rs  lexeme_path.rs  mod.rs  ordered_linked_list.rs  segmentor.rs
src/dict/: dictionary.rs  hit.rs  mod.rs  trie.rs
tests/: test-ik.rs  test-tantivy-ik.rs
