[package]
name = "ik-rs"
version = "0.1.0"
authors = ["blueshen <zhiyi.shen@gmail.com>"]
license = "MIT"
categories = ["database-implementations", "data-structures"]
description = """Search engine library"""
documentation = ""
homepage = ""
repository = ""
readme = "README.md"
keywords = ["search", "information", "retrieval"]
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9.11"
unicode-blocks = "0.1.4"
once_cell = "1.15.0"

[dev-dependencies]
log = "0.4.17"
env_logger = "0.9.1"