[package]
name = "ik-rs"
version = "0.5.0"
authors = ["blueshen <zhiyi.shen@gmail.com>"]
license = "LGPL-2.1-only"
categories = ["database-implementations", "data-structures"]
description = """chinese segment, ik-analyzer for rust"""
documentation = "https://docs.rs/ik-rs"
homepage = "https://github.com/blueshen/ik-rs"
repository = "https://github.com/blueshen/ik-rs"
readme = "README.md"
keywords = ["search", "information", "retrieval", "tantivy", "ik-analyzer"]
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9.11"
unicode-blocks = "0.1.4"
once_cell = "1.16.0"
log = "0.4.17"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
random-string = "1.0.0"

[[bench]]
name = "ik_bench"
harness = false